check if mesh exists done